# scrobble-scrubber

./: .dir-locals.el  .envrc  .gitignore  CLAUDE.md  COMPILATION_TO_CANONICAL_LOGIC.md  Cargo.toml  Grok-Problem-Solving Steps Verification Request.docx  README.md  REWRITE_RULES.md  SCRUBBER_DEBUGGING.md  TODO.org  USER_GUIDE.md  analyze_remaster_patterns.py  config.example.toml  crash.md  example_deluxe_edition_test.md  flake.nix  justfile  search_remaster_albums.rs  session_test.rs  test_ci_trigger.md  test_log.rs  test_mb.rs  test_output.txt
.claude/: settings.local.json
.claude/commands/: checks.md  commit.md  fix-app.md
.github/: RELEASE.md
.github/workflows/: build-linux-app.yml  build-macos-arm-app.yml  build-macos-intel-app.yml  build-test.yml  build-windows-app.yml  ci.yml  cli-release.yml  create-app-release.yml  release.yml  simple-release.yml  test-linux-app.yml  test-macos-arm-app.yml  test-macos-intel-app.yml  test-windows-app.yml
app/: Cargo.toml  Dioxus.toml  README.md  flake.nix  index.html  result  styles.css
app/assets/: default_remaster_rules.json  icon.icns
app/assets/icons/: icon.icns
app/src/: api.rs  app.rs  cache.rs  error_utils.rs  icons.rs  main.rs  rule_workshop.rs  scrubber_manager.rs  server_functions.rs  simple_main.rs  tray.rs  types.rs  utils.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: activity_log.rs  artist_processing.rs  cache_management.rs  client_event_indicator.rs  config_page.rs  default_rules.rs  live_preview_controls.rs  login.rs  mod.rs  musicbrainz.rs  musicbrainz_lookup.rs  navigation.rs  pending_edits.rs  pending_items.rs  pending_rules.rs  rate_limit_indicator.rs  rewrite_rules.rs  rule_editor.rs  rule_preview.rs  rule_workshop.rs  scrobble_scrubber.rs  scrubber_controls.rs  scrubber_statistics.rs  settings.rs  timestamp_management.rs  track_processing_progress.rs  track_sources.rs
cli/: Cargo.toml
cli/src/: auth.rs  main.rs  tui.rs
cli/src/commands/: cache.rs  mod.rs  musicbrainz.rs  pending.rs  rules.rs  timestamp.rs
examples/: musicbrainz_test.rs
js/: Cargo.toml
js/example/: package.json
js/src/: client.rs  lib.rs  main.js
lib/: Cargo.toml
lib/assets/: default_remaster_rules.json  default_rewrite_rules.json
lib/src/: compilation_to_canonical_provider.rs  config.rs  default_rules.rs  edit.rs  event_logger.rs  events.rs  json_logger.rs  lib.rs  musicbrainz_client.rs  musicbrainz_provider.rs  openai_provider.rs  recent_user_manager.rs  rewrite.rs  rewrite_processor.rs  scrub_action_provider.rs  scrubber.rs  session_manager.rs  track_cache.rs  track_provider.rs  web_interface.rs
lib/src/cli/: auth.rs  main.rs  mod.rs
lib/src/cli/commands/: cache.rs  musicbrainz.rs  pending.rs  rules.rs  timestamp.rs
lib/src/musicbrainz/: client.rs  compilation_provider.rs  mod.rs
lib/src/persistence/: file_storage.rs  memory_storage.rs  mod.rs
lib/tests/: beatles_anthology_tests.rs  beatles_bootleg_fix.rs  compilation_provider_precise_tests.rs  compilation_to_canonical.rs  config.rs  config_tests.rs  musicbrainz_confirmation.rs  musicbrainz_confirmation_tests.rs  rewrite.rs  rewrite_tests.rs  scrubber_tests.rs  vcr.rs  vcr_tests.rs  whole_string_matching.rs  whole_string_matching_tests.rs  would_modify_bug.rs  would_modify_bug_tests.rs
lib/tests/common/: mod.rs
lib/tests/vcr/: beatles_artist_full_processing.rs  mod.rs  once.rs
lib/tests/vcr/common/: mod.rs
lib/tests/vcr/fixtures/beatles_full_artist_processing/: interactions.yaml
lib/tests/vcr/fixtures/beatles_full_artist_processing/bodies/: resp_001.txt  resp_002.txt  resp_003.txt  resp_004.txt  resp_005.txt  resp_006.txt  resp_007.txt  resp_008.txt  resp_009.txt  resp_010.txt  resp_011.txt  resp_012.txt  resp_013.txt  resp_014.txt  resp_015.txt  resp_016.txt  resp_017.txt  resp_018.txt  resp_019.txt  resp_020.txt  resp_021.txt  resp_022.txt  resp_023.txt  resp_024.txt  resp_025.txt  resp_026.txt  resp_027.txt  resp_028.txt  resp_029.txt  resp_030.txt  resp_031.txt  resp_032.txt  resp_033.txt  resp_034.txt  resp_035.txt  resp_036.txt  resp_037.txt  resp_038.txt  resp_039.txt  resp_040.txt
lib/tests/vcr/fixtures/scrubber_end_to_end_with_default_rules/: interactions.yaml
lib/tests/vcr/fixtures/scrubber_end_to_end_with_default_rules/bodies/: req_010.b64  req_014.b64  req_018.b64  resp_001.txt  resp_002.txt  resp_003.txt  resp_004.txt  resp_005.txt  resp_006.txt  resp_007.txt  resp_009.txt  resp_010.txt  resp_011.txt  resp_013.txt  resp_014.txt  resp_015.txt  resp_017.txt  resp_018.txt
napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  scrobble-scrubber-native.linux-x64-gnu.node  test.js
napi/src/: lib.rs
rule-editor/: Cargo.toml
rule-editor/src/: main.rs
session_test_runner/: Cargo.toml
src/: config.rs  lib.rs  main.rs  openai_provider.rs  persistence.rs  rewrite_processor.rs  scrub_action_provider.rs  scrubber.rs  web_interface.rs
tests/: config_tests.rs
wasm/: Cargo.toml  example_node.js  package.json
wasm/app/: index.html  package-lock.json  package.json  scrubber.html  server.js  vite.config.js
wasm/app/src/: main.js
wasm/example/: scrubber.html  vite.config.js
wasm/src/: client.rs  lib.rs  main.js
