[workspace]
members = ["lib", "cli", "wasm", "napi", "app"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
version = "1.0.12"
edition = "2021"
license = "MIT"
repository = "https://github.com/imalison/lastfm-edit"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

