[workspace]
members = ["lib", "wasm", "napi", "app"]
default-members = ["lib"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/colonelpanic8/scrobble-scrubber"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

