[package]
name = "scrobble-scrubber-app"
version = "0.1.0"
authors = ["Ivan Malison <IvanMalison@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
scrobble-scrubber = { path = "../lib", features = ["pickledb"] }
lastfm-edit = "0.6.0"
http-client = { version = "^6.6.3", package = "http-client-2", features = ["curl_client"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
config = "0.14"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
