[package]
name = "scrobble-scrubber-app"
version = "0.1.0"
authors = ["Ivan Malison <IvanMalison@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus" }
scrobble-scrubber = { path = "../lib", features = ["pickledb", "cli", "openai"] }
lastfm-edit = { version = "3.8.4", features = ["mock"] }
http-client = { version = "^6.6.3", package = "http-client-2", features = ["curl_client"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
config = "0.14"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
urlencoding = "2.1"
toml = "0.8"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
image = "0.25"
tray-icon = "0.17"
crossbeam-channel = "0.5.15"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
