[package]
name = "scrobble-scrubber-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for scrobble-scrubber"
license.workspace = true
repository.workspace = true

[[bin]]
name = "scrobble-scrubber"
path = "src/main.rs"

[dependencies]
# Core library
scrobble-scrubber = { path = "../lib", features = ["full"] }

# External dependencies
lastfm-edit = { version = "4.0.0", features = ["mock"] }
http-client = { version = "^6.6.3", package = "http-client-2", features = ["curl_client"] }
http-types = { version = "3.1.0", package = "http-types-2" }
tokio = { version = "1.0", features = ["full"] }

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
config = "0.14"
dirs = "6.0.0"
log = "0.4"
chrono = "0.4"
serde_json = "1.0"

# TUI dependencies
ratatui = "0.28"
crossterm = "0.27"

# MusicBrainz commands dependencies
musicbrainz_rs = { version = "0.12.0" }
regex = "1.0"
