[package]
name = "scrobble-scrubber"
version = "0.1.0"
edition = "2021"
description = "Automated Last.fm scrobble monitoring and correction tool"
license = "MIT"
repository = "https://github.com/imalison/lastfm-edit"
keywords = ["lastfm", "scrobbling", "music", "metadata"]
categories = ["multimedia::audio", "web-programming"]

[lib]
name = "scrobble_scrubber"
path = "src/lib.rs"

[dependencies]
# Core dependencies always included
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
log = "0.4"
async-trait = "0.1"
thiserror = "2.0.12"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "std"], default-features = false }

# External dependencies
lastfm-edit = { version = "2.0.0", default-features = false, features = ["mock"] }

# Optional dependencies for different feature sets
http-client = { version = "^6.6.3", package = "http-client-2", optional = true, default-features = false }
tokio = { version = "1.0", features = ["full"], optional = true }
pickledb = { version = "0.5", optional = true }

# Config support (used by CLI feature)
config = { version = "0.14", optional = true }
dirs = { version = "6.0.0", optional = true }

# Web interface dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }

# HTTP client - used by MusicBrainz (always) and OpenAI (optional)
reqwest = { version = "0.11", features = ["json"] }

# OpenAI dependencies
openai-api-rs = { version = "6.0.7", optional = true }

# MusicBrainz dependencies - always included
musicbrainz_rs = { version = "0.12.0" }

[features]
default = ["tokio", "http-client/curl_client", "cli"]
full = ["tokio", "web", "openai", "cli", "pickledb", "http-client/curl_client"]
cli = ["config", "dirs"]
pickledb = ["dep:pickledb"]
wasm = ["http-client/wasm_client", "lastfm-edit/wasm", "chrono/wasm-bindgen"]  # WASM-compatible feature set
web = ["axum", "tower", "tower-http"]
openai = ["openai-api-rs"]

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"