[package]
name = "scrobble-scrubber"
version.workspace = true
edition.workspace = true
description = "Automated Last.fm scrobble monitoring and correction tool"
license.workspace = true
repository.workspace = true
keywords = ["lastfm", "scrobbling", "music", "metadata"]
categories = ["multimedia::audio"]

[lib]
name = "scrobble_scrubber"
path = "src/lib.rs"

[[bin]]
name = "scrobble-scrubber"
path = "src/cli/main.rs"
required-features = ["cli"]

[dependencies]
# Core dependencies always included
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
log = "0.4"
async-trait = "0.1"
thiserror = "2.0.12"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "std"], default-features = false }

# External dependencies
lastfm-edit = { version = "4.0.0", default-features = false, features = ["mock"] }

# Optional dependencies for different feature sets
http-client = { version = "^6.6.3", package = "http-client-2", optional = true, default-features = false }
tokio = { version = "1.0", features = ["full"], optional = true }
pickledb = { version = "0.5", optional = true }

# Config support (used by CLI feature)
config = { version = "0.14", optional = true }
dirs = { version = "6.0.0", optional = true }

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

# TUI dependencies
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.27", optional = true }


# HTTP client - used by MusicBrainz (always) and OpenAI (optional)
reqwest = { version = "0.11", features = ["json"] }

# OpenAI dependencies
openai-api-rs = { version = "6.0.7", optional = true }

# MusicBrainz dependencies - always included
musicbrainz_rs = { version = "0.12.0" }

[features]
default = ["tokio", "http-client/curl_client", "cli", "pickledb"]
full = ["tokio", "openai", "cli", "pickledb", "http-client/curl_client"]
cli = ["config", "dirs", "clap", "env_logger", "ratatui", "crossterm", "pickledb"]
pickledb = ["dep:pickledb"]
wasm = ["http-client/wasm_client", "lastfm-edit/wasm", "chrono/wasm-bindgen"]  # WASM-compatible feature set
openai = ["openai-api-rs"]

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
http-client-vcr = { version = "1.1.0", package = "http-client-vcr" }
test-log = "0.2"
