[package]
name = "scrobble-scrubber-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
scrobble-scrubber = { path = "../lib" }
lastfm-edit = { path = "../../lastfm-edit", features = ["mock"] }
http-client = { version = "^6.6.3", package = "http-client-2", features = ["native_client"] }

# napi-rs dependencies
napi = { version = "2", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"