[package]
name = "scrobble-scrubber-node"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
scrobble-scrubber = { path = "../lib" }
lastfm-edit = { version = "4.0.0", features = ["mock"] }
http-client = { version = "^6.6.3", package = "http-client-2", features = ["native_client"] }

# napi-rs dependencies
napi = { version = "2", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"