[package]
name = "session_test_runner"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "session_test"
path = "../session_test.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"