[package]
name = "scrobble-scrubber-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"



[lib]
name = "scrobble_scrubber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

