[package]
name = "scrobble-scrubber-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"



[lib]
name = "scrobble_scrubber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scrobble-scrubber = { path = "../../lib", features = ["cli", "tokio", "openai"] }
lastfm-edit = "0.6.0"
http-client = { version = "6.5", package = "http-client-2", default-features = false, features = ["curl_client"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.0"

